# MVP

./: .gitignore  Cargo.toml  README.md  dev  docker-compose.yml
apps/delegate/bot/: .gitignore  Cargo.toml
apps/delegate/bot/src/: approval.rs  budget.rs  context.rs  db.rs  dynamic_registry.rs  event.rs  heartbeat.rs  logger.rs  main.rs  messenger.rs  models.rs  oauth.rs  registry.rs  retriever.rs  slack.rs  streaming.rs  text.rs  tool_loop.rs  tools.rs  triage.rs  workspace.rs
apps/delegate/bot/src/eval/: fixtures.rs  mock.rs  mod.rs  persist.rs  runner.rs  scoring.rs
apps/delegate/bot/workspace/: HEARTBEAT.md  IDENTITY.md  INTENTS.md  JIRA.md  MEMORY.md
apps/delegate/bot/workspace/logs/: 2026-02-26.md  2026-03-01.md  2026-03-04.md  2026-03-05.md  2026-03-08.md
apps/delegate/bot/workspace/memory/: bot-capabilities.md  communication-style.md  decisions.md  delegate-architecture.md  dev-42-onboarding.md  model-upgrade.md  signalops-mvp.md  slack-formatting.md  standup-preferences.md  timeline.md
apps/delegate/bot/workspace/pending/: 20260301-221753.420-dm-user.md  20260301-224630.697-dm-user.md  20260301-231007.698-dm-user.md  20260301-231112.234-dm-user.md  20260301-231625.015-dm-user.md  20260305-142023.872-http-request.md  20260305-142028.251-http-request.md  20260305-142036.289-http-request.md  20260305-142036.481-http-request.md  20260305-142042.279-http-request.md  20260305-142042.463-http-request.md  (+54 more)
apps/delegate/eval/: Cargo.toml  README.md
apps/delegate/eval/src/: compiler.rs  main.rs  models.rs  report.rs  retriever.rs  runner.rs  triage.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/application/: decision_service.rs  errors.rs  mod.rs  ports.rs
backend/src/domain/: models.rs
backend/src/infrastructure/: mod.rs  postgres_repo.rs
backend/src/infrastructure/entities/: decision.rs
backend/src/infrastructure/integrations/: gong.rs  gong_client.rs  insight_llm.rs  jira_client.rs  mod.rs
backend/src/presentation/: http.rs
(+96 files in other folders)
